# CodexPotter

./: .gitignore  AGENTS.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/prompts/: developer_prompt.md  project_main.md
cli/src/: app_server_backend.rs  atomic_write.rs  codex_compat.rs  config.rs  exec.rs  exec_jsonl.rs  main.rs  path_utils.rs  potter_app_server.rs  potter_app_server_client.rs  potter_app_server_protocol.rs  project_runner.rs  prompt_queue.rs  resume.rs  resume_picker_index.rs  round_runner.rs  rounds.rs  startup.rs  terminal_title.rs  yolo.rs
cli/src/app_server/: codex_backend.rs  mod.rs  stream_recovery.rs  test_support.rs  upstream_cli_args.rs
cli/src/exec/: human_round_ui.rs  json_round_ui.rs  jsonl.rs  mod.rs
cli/src/workflow/: mod.rs  potter_xmodel.rs  project.rs  project_progress_files.rs  project_render_loop.rs  project_runner.rs  project_stop_hooks.rs  projects_overlay_backend.rs  projects_overlay_details.rs  projects_overlay_index.rs  prompt_queue.rs  replay_session_config.rs  resume.rs  resume_picker_index.rs  rollout.rs  rollout_resume_index.rs  round_event_bridge.rs  round_runner.rs
hooks/: AGENTS.md  Cargo.toml
hooks/src/: lib.rs  registry.rs  schema.rs
hooks/src/engine/: command_runner.rs  common.rs  config.rs  discovery.rs  dispatcher.rs  mod.rs  schema_loader.rs
hooks/src/events/: common.rs  mod.rs  project_stop.rs
protocol/: Cargo.toml
protocol/src/: approvals.rs  lib.rs  models.rs  potter_command.rs  potter_stream_recovery.rs  protocol.rs  request_permissions.rs  user_input.rs
tui/: AGENTS.md  Cargo.toml
tui/src/: app_event.rs  app_server_render.rs  codex_config.rs  codex_home.rs  codex_system_paths.rs  commentary_status.rs  custom_terminal.rs  diff_render.rs  exec_human_output.rs  exit.rs  external_editor.rs  history_cell.rs  history_cell_potter.rs  human_time.rs  insert_history.rs  interrupted_project_prompt.rs  lib.rs  local_path.rs  markdown.rs  markdown_render.rs  markdown_render_tests.rs  markdown_stream.rs  multi_agents.rs  path_utils.rs  potter_config.rs  potter_project_summary.rs  potter_tui.rs  projects_overlay.rs  prompt_history_store.rs  reasoning_status.rs  resume_picker_prompt.rs  skills_discovery.rs  slash_command.rs  startup_banner.rs  startup_setup.rs  status_indicator_widget.rs  status_line.rs  terminal_palette.rs  tui.rs  ui_colors.rs  (+6 more)
tui/src/bottom_pane/: chat_composer.rs  chat_composer_history.rs  command_popup.rs  footer.rs  fuzzy_match.rs  list_selection_view.rs  mod.rs  paste_burst.rs  prompt_args.rs  prompt_footer.rs  queued_user_messages.rs  selection_popup_common.rs  skill_popup.rs  slash_commands.rs  textarea.rs  word_boundary.rs
tui/src/exec_cell/: render.rs
tui/src/render/: line_utils.rs  renderable.rs
tui/src/snapshots/: codex_tui__app_server_render__tests__prompt_footer_external_editor_override.snap  codex_tui__app_server_render__tests__prompt_footer_includes_branch_and_working_dir.snap  codex_tui__app_server_render__tests__prompt_footer_includes_external_editor.snap  codex_tui__app_server_render__tests__prompt_footer_includes_yolo_indicator.snap  codex_tui__app_server_render__tests__prompt_footer_omits_branch_separator_when_branch_unknown.snap  codex_tui__app_server_render__tests__prompt_idle_prompt_is_separated_from_transcript_vt100.snap  codex_tui__app_server_render__tests__prompt_selection_view_hides_composer_and_prompt_footer_vt100.snap  codex_tui__app_server_render__tests__render_only_round_banner_padding_before_status_vt100.snap  codex_tui__app_server_render__tests__render_only_round_banner_reconnecting_status_vt100.snap  codex_tui__app_server_render__tests__round_renderer_coalesced_success_ran_cells.snap  codex_tui__app_server_render__tests__round_renderer_coalesces_explored_cells.snap  codex_tui__app_server_render__tests__round_renderer_context_compacted_vt100.snap  codex_tui__app_server_render__tests__round_renderer_ctrl_c_preserves_pending_explored_output_vt100.snap  codex_tui__app_server_render__tests__round_renderer_elicitation_request.snap  codex_tui__app_server_render__tests__round_renderer_end_to_end_vt100.snap  codex_tui__app_server_render__tests__round_renderer_esc_interrupt_flow_vt100.snap  codex_tui__app_server_render__tests__round_renderer_flushes_agent_stream_before_ran_vt100.snap  codex_tui__app_server_render__tests__round_renderer_flushes_explored_cells_on_turn_complete.snap  codex_tui__app_server_render__tests__round_renderer_flushes_viewed_image_cells_on_turn_complete_in_minimal.snap  codex_tui__app_server_render__tests__round_renderer_guardian_assessment.snap  codex_tui__app_server_render__tests__round_renderer_hook_completed.snap  codex_tui__app_server_render__tests__round_renderer_hook_started.snap  codex_tui__app_server_render__tests__round_renderer_idle_prompt_is_separated_from_transcript_vt100.snap  codex_tui__app_server_render__tests__round_renderer_live_explored_coalesces_mixed_call_reads_vt100.snap  codex_tui__app_server_render__tests__round_renderer_live_explored_in_viewport_vt100.snap  codex_tui__app_server_render__tests__round_renderer_live_viewed_images_in_minimal_transient_lines.snap  codex_tui__app_server_render__tests__round_renderer_minimal_replay_fixture_suppresses_worked_for_separator_vt100.snap  codex_tui__app_server_render__tests__round_renderer_minimal_suppresses_worked_for_separator_vt100.snap  codex_tui__app_server_render__tests__round_renderer_potter_project_budget_exhausted_block_vt100.snap  codex_tui__app_server_render__tests__round_renderer_potter_project_started.snap  codex_tui__app_server_render__tests__round_renderer_potter_project_started_project_hint.snap  codex_tui__app_server_render__tests__round_renderer_potter_project_succeeded_block_vt100.snap  codex_tui__app_server_render__tests__round_renderer_potter_round_started.snap  codex_tui__app_server_render__tests__round_renderer_request_permissions.snap  codex_tui__app_server_render__tests__round_renderer_request_user_input.snap  codex_tui__app_server_render__tests__round_renderer_round_banner_padding_before_status_vt100.snap  (+23 more)
tui/src/streaming/: commit_tick.rs  controller.rs  (+1 more)
(+38 files in other folders)
