[package]
edition.workspace = true
license.workspace = true
name = "codex-hooks"
version.workspace = true

[lib]
doctest = false
name = "codex_hooks"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
