[package]
name = "codex-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_tui"
path = "src/lib.rs"

[features]
debug-logs = []

[lints]
workspace = true

[dependencies]
ansi-to-tui = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
codex-file-search = { workspace = true }
codex-protocol = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true, features = ["bracketed-paste", "event-stream"] }
derive_more = { workspace = true, features = ["is_variant"] }
diffy = { workspace = true }
dirs = { workspace = true }
itertools = { workspace = true }
icu_segmenter = { workspace = true }
pathdiff = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true, features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
regex-lite = { workspace = true }
reqwest = { workspace = true }
shlex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
supports-color = { workspace = true }
tempfile = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "process",
    "rt-multi-thread",
    "test-util",
    "time",
] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ["log"] }
syntect = { workspace = true }
two-face = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
which = { workspace = true }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
winsplit = "0.1"


[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
serial_test = { workspace = true }
tokio-util = { workspace = true, features = ["time"] }
vt100 = { workspace = true }
